Don't reset memory attributes when mapping physical addresses for ACPI.

Previously, AcpiOsMemory was using pmap_mapbios which would always map
the requested address Write-Back (WB).  For several AMD Ryzen laptops,
the BIOS uses AcpiOsMemory to directly access the PCI MCFG region in
order to access PCI config registers.  This has the side effect of
remapping the MCFG region in the direct map as WB instead of UC
hanging the laptops during boot.

On the one laptop I examined in detail, the _PIC global method used to
switch from 8259A PICs to I/O APICs uses a pair of PCI config space
registers at offset 0x84 in the device at 0:0:0 to as a pair of
address/data registers to access an indirect register in the chipset
and clear a single bit to switch modes.

Instead, add yet another wrapper around pmap_mapdev_attr() named
pmap_mapphys() for use by ACPI SystemMemory accesses.  This wrapper
does not modify the attributes of any existing mappings and instead
uses the existing attributes.  If a new mapping is created, this new
mapping uses WB (the default memory attribute).

PR:	231760