sys/i386/include/pmap_base.h
@@ -34,6 +34,9 @@
 #ifndef _MACHINE_PMAP_BASE_H_
 #define	_MACHINE_PMAP_BASE_H_
 
+/* Internal flags for pmap_mapdev_attr(). */
+#define	MAPDEV_SETATTR		0x0000001	/* Modify existing attrs. */
+
 struct pmap_methods {
 	void (*pm_ksetrw)(vm_offset_t);
 	void (*pm_remap_lower)(bool);
@@ -93,7 +96,7 @@ struct pmap_methods {
 	boolean_t (*pm_is_referenced)(vm_page_t);
 	void (*pm_remove_write)(vm_page_t);
 	int (*pm_ts_referenced)(vm_page_t);
-	void *(*pm_mapdev_attr)(vm_paddr_t, vm_size_t, int);
+	void *(*pm_mapdev_attr)(vm_paddr_t, vm_size_t, int, int);
 	void (*pm_unmapdev)(vm_offset_t, vm_size_t);
 	void (*pm_page_set_memattr)(vm_page_t, vm_memattr_t);
 	vm_paddr_t (*pm_extract)(pmap_t, vm_offset_t);
